Change test to use data provider